[package]
name = "count-digits"
version = "0.2.5"
authors = ["Erik Nordin <nordzillacode@gmail.com>"]
description = "A no-std trait to count the digits of integer types in various number bases."
homepage = "https://github.com/nordzilla/count-digits"
repository = "https://github.com/nordzilla/count-digits"
keywords = ["count", "digits", "integer", "trait", "length"]
categories = [ "algorithms", "mathematics", "no-std" ]
license = "MIT"
edition = "2021"
rust-version = "1.71.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
paste = "1.0.14"

[[bench]]
name = "benchmark"
harness = false

[badges]
codecov = { repository = "nordzilla/count-digits", branch = "main", service = "github" }

