[package]
name = "count-digits"
version = "0.5.0"
authors = ["Erik Nordin <nordzillacode@gmail.com>"]
description = "A no-std trait to determine the lengths of integers in various number bases."
homepage = "https://github.com/nordzilla/count-digits"
repository = "https://github.com/nordzilla/count-digits"
keywords = ["count", "digits", "integer", "length", "trait"]
categories = [ "algorithms", "mathematics", "no-std" ]
license = "MIT"
edition = "2021"
rust-version = "1.71.1"
include = ["src/lib.rs", "benches/benchmark.rs", "LICENSE", "README.md", "CHANGELOG.md"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
paste = "1.0.14"

[[bench]]
name = "benchmark"
harness = false
